Correction mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -17,7 +17,7 @@ body {
 }
 
 .container {
-  width: 550px;
+  max-width: 550px;
   margin: 0 auto;
   padding: 8px;
 }
